# rot

./: .gitignore  AGENTS.md  Cargo.toml  README.md  architecture.md  brainstorm.md  install.sh  pdr.md  plan.md  test_bash.rs  test_bash2  test_bash2.rs  test_bash3  test_bash3.rs
crates/rot-cli/: Cargo.toml
crates/rot-cli/src/: cli.rs  main.rs
crates/rot-cli/src/commands/: chat.rs  exec.rs  mod.rs  tools.rs
crates/rot-cli/tests/: integration_test.rs
crates/rot-core/: Cargo.toml
crates/rot-core/src/: agent.rs  agent_profile.rs  agent_registry.rs  config.rs  error.rs  lib.rs  message.rs  permission.rs  security.rs
crates/rot-mcp/: Cargo.toml
crates/rot-mcp/src/: lib.rs
crates/rot-plugin/: Cargo.toml
crates/rot-plugin/src/: lib.rs
crates/rot-provider/: Cargo.toml
crates/rot-provider/src/: error.rs  lib.rs  traits.rs  types.rs
crates/rot-provider/src/providers/: anthropic.rs  mod.rs  openai.rs  openai_compat.rs  zai.rs
crates/rot-rlm/: Cargo.toml
crates/rot-rlm/src/: context.rs  engine.rs  lib.rs  prompts.rs  repl.rs  repl_tests.rs
crates/rot-sandbox/: Cargo.toml
crates/rot-sandbox/src/: lib.rs
crates/rot-session/: Cargo.toml
crates/rot-session/src/: error.rs  format.rs  lib.rs  store.rs
crates/rot-tools/: Cargo.toml
crates/rot-tools/src/: error.rs  external.rs  lib.rs  mcp.rs  path_guard.rs  registry.rs  traits.rs
crates/rot-tools/src/builtin/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  task.rs  webfetch.rs  write.rs
crates/rot-tui/: Cargo.toml
crates/rot-tui/src/: app.rs  event.rs  lib.rs  runner.rs
docs/: configuration.md  getting-started.md  tools.md
