[workspace]
members = [
    "crates/rot-cli",
    "crates/rot-core",
    "crates/rot-rlm",
    "crates/rot-provider",
    "crates/rot-sandbox",
    "crates/rot-tools",
    "crates/rot-tui",
    "crates/rot-plugin",
    "crates/rot-session",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/your-org/rot"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# Schema
schemars = "0.8"
jsonschema = "0.33"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
ulid = "1"
blake3 = "1"
dirs = "6"
tempfile = "3"
portable-pty = "0.8"
pin-project = "1"
once_cell = "1"
reqwest-eventsource = "0.6"

# Testing
tokio-test = "0.4"

# Internal crates
rot-core = { path = "crates/rot-core" }
rot-rlm = { path = "crates/rot-rlm" }
rot-provider = { path = "crates/rot-provider" }
rot-sandbox = { path = "crates/rot-sandbox" }
rot-tools = { path = "crates/rot-tools" }
rot-tui = { path = "crates/rot-tui" }
rot-plugin = { path = "crates/rot-plugin" }
rot-session = { path = "crates/rot-session" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
