[package]
name = "rot-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rot"
path = "src/main.rs"

[dependencies]
rot-core = { workspace = true }
rot-provider = { workspace = true }
rot-tools = { workspace = true }
rot-session = { workspace = true }
rot-tui = { workspace = true }
rot-rlm = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
