[package]
name = "rot-rlm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1.10"
rot-provider = { version = "0.1.0", path = "../rot-provider" }
rot-core = { version = "0.1.0", path = "../rot-core" }
ulid = "1"
anyhow.workspace = true
rot-tools = { version = "0.1.0", path = "../rot-tools" }

[dev-dependencies]
tempfile = { workspace = true }
