[package]
name = "rot-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rot-sandbox = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

# File globbing with .gitignore support
glob = "0.3"
ignore = "0.4"

# Regex for grep tool
regex = "1"

[dev-dependencies]
tempfile = { workspace = true }
