[package]
name = "rot-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rot-core = { workspace = true }
rot-provider = { workspace = true }
rot-tools = { workspace = true }
rot-session = { workspace = true }

tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rot-rlm = { version = "0.1.0", path = "../rot-rlm" }
